# django-musicplayer

./: .gitignore  Pipfile  README.md  db.sqlite3  generate_secret.py  pyproject.toml
music_player/: settings.py  urls.py
player/migrations/: 0001_initial.py
player/templates/: index.html
