[tool.poetry]
name = "django-musicplayer"
version = "0.1.0"
description = "Simple music player built with django, javascript, and bootstrap"
authors = ["jnutterdev <hello@jnutterdev.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.2.0"
python-dotenv = "^0.17.1"
Django = "^3.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
